# non-essential

gen1/skill_agent/: .env  .gitignore  client_test.py  main.py  pyproject.toml  requirements.txt  verify_memory.py
gen1/skill_agent/.agent/: GEMINI.md
gen1/skill_agent/.agent/docs/: API.md  ARCHITECTURE.md  SKILLS.md
gen1/skill_agent/skills/api-development/: skill.md
gen1/skill_agent/skills/content-idea-generator/: skill.md
gen1/skill_agent/skills/content-ideas/: skill.md
gen1/skill_agent/skills/customer-support/: skill.md
gen1/skill_agent/skills/document-generation/: skill.md
gen1/skill_agent/skills/financial-analysis/: skill.md
gen1/skill_agent/skills/hr-recruitment/: skill.md
gen1/skill_agent/skills/legal-document-review/: skill.md
gen1/skill_agent/skills/research_assistant/: skill.md
gen1/skill_agent/skills/skill-creator/: skill.md
gen1/skill_agent/src/: crew.py
gen1/skill_agent/src/config/: agents.yaml  setting.py  settings.py  tasks.yaml
gen1/skill_agent/src/tools/: __init__.py  code_executor_tool.py  duck_duck_go_search_tool.py  skills_manager_tool.py  web_fetch_tool.py
gen1/skill_agent/static/: index.html  script.js  style.css
gen1/skills_mcp/: .env  .env.example  DEPLOYMENT.md  README.md  app.py  fastmcp.json  pyproject.toml
gen1/skills_mcp/config/: agents.yaml
gen1/skills_mcp/core/: CREW_INTEGRATION.md  SETTINGS.md  SKILLS_MANAGER.md  crew.py  settings.py  skills_manager.py
gen1/skills_mcp/mcp_server/: MCP_LAYER.md  __init__.py  __main__.py  resources.py  server.py  tools.py
gen1/skills_mcp/skills/_template/: skill.md
(+19 files in other folders)
