[project]
name = "skill-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[google-genai]>=0.95.0",
    "crewai-tools>=0.33.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "requests>=2.32.5",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.3.0",
]
